# autonomous-boat

./: Boat.py  CMakeLists.txt  README.md  RouteManager.py  tags
oldpy/: GPS.py  boatconfig.json  main.py  todo.txt
source/: CMakeLists.txt  config.c  config.h  location.c  location.h  logger.c  logger.h  main-sim.c  main.c  route.c  route.h  wind.h
source/controls/: CMakeLists.txt  rudder.c  rudder.h  sail.c  sail.h
source/sensors/: CMakeLists.txt  compass.c  compass.h  gps.c  gps.h  wind.c  wind.h
source/simulation/: CMakeLists.txt  controls.h  sensors.h
